--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,7 +1,17 @@
 <h1>Portfolio Items</h1>
+
+<%= link_to "Create New Item", new_portfolio_path %>
+
+<!-- Subdomain practice -->
+<%#= link_to "Create New Item", new_portfolio_url, subdomain: 'my_subdomain' %>
+
+<p><%= new_portfolio_path %></p>
+<p><%= new_portfolio_url %></p>
+
 <% @portfolio_items.each do |portfolio_item| %>
   <p><%= portfolio_item.title %></p>
   <p><%= portfolio_item.subtitle %></p>
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+  <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
 <% end %>
