--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,8 +5,6 @@
 <!-- Subdomain practice -->
 <%#= link_to "Create New Item", new_portfolio_url, subdomain: 'my_subdomain' %>
 
-<p><%= new_portfolio_path %></p>
-<p><%= new_portfolio_url %></p>
 
 <% @portfolio_items.each do |portfolio_item| %>
   <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></p>
@@ -14,4 +12,5 @@
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
   <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+  <%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
