analyzing params notes and data flow review

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -8,3 +8,14 @@
 <% @portfolio_item.technologies.each do |t| %>
 <p><%= t.name %></p>
 <% end %>
+
+<hr>
+
+<%= params.inspect %><br />
+<%= params[:id] %><br />
+<%= params[:action] %><br />
+
+<hr>
+<%# Don't do this! but it's a good explainer %>
+<%= Portfolio.find(params[:id]).title %><br />
+<%= Portfolio.find(params[:id]).technologies %>
